# rstest-bdd

./: .concordat  .gitignore  .markdownlint-cli2.jsonc  .vale.ini  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  any  debugging-plan-20260104-031251.md  downcast2  dylint.toml  elide  lading.toml  pyproject.toml  ruff.toml  rust_out  rustc-ice-2025-11-18T19_43_33-19827.txt  rustc-ice-2025-11-18T19_45_36-21168.txt  typeid  typos.local.toml  typos.toml
crates/cargo-bdd/: Cargo.toml  README.md
crates/cargo-bdd/src/: cli.rs  lib.rs  main.rs  output.rs  registry.rs  test_steps.rs
crates/cargo-bdd/src/registry/: tests.rs
crates/cargo-bdd/src/snapshots/: cargo_bdd__output__tests__bypassed_steps.snap  cargo_bdd__output__tests__scenarios_compact.snap  cargo_bdd__output__tests__scenarios_step_listing_appendix.snap  cargo_bdd__output__tests__scenarios_with_reasons.snap
crates/cargo-bdd/tests/: cli.rs
crates/cargo-bdd/tests/features/: sample.feature
crates/rstest-bdd/: CHANGELOG.md  Cargo.toml  README.md  i18n.toml
crates/rstest-bdd-harness/: Cargo.toml  README.md
crates/rstest-bdd-harness-gpui/: Cargo.toml  README.md
crates/rstest-bdd-harness-gpui/src/: gpui_harness.rs  lib.rs  policy.rs
crates/rstest-bdd-harness-gpui/src/gpui_harness/: tests.rs
crates/rstest-bdd-harness-gpui/tests/: attribute_policy_behaviour.rs  harness_behaviour.rs  harness_led_defaults.rs  macro_compile.rs  scenario_macros.rs  scenario_name_in_logs.rs  stateful_window.rs
crates/rstest-bdd-harness-gpui/tests/features/: gpui_harness.feature  harness_led_defaults.feature  stateful_window.feature
crates/rstest-bdd-harness-gpui/tests/fixtures_macros/: scenario_attributes_gpui.rs  scenario_harness_gpui_default.expanded.rs  scenario_harness_gpui_default.rs  scenario_harness_gpui_override_default.expanded.rs  scenario_harness_gpui_override_default.rs  scenario_harness_gpui_sync_rejected.rs  scenario_harness_gpui_sync_rejected.stderr  scenarios_harness_gpui_default.expanded.rs  scenarios_harness_gpui_default.rs  scenarios_harness_gpui_override_default.expanded.rs  scenarios_harness_gpui_override_default.rs
crates/rstest-bdd-harness-gpui/tests/snapshots/: scenario_name_in_logs__augmented_message_includes_scenario_name_for_opaque_any_payload.snap  scenario_name_in_logs__augmented_message_includes_scenario_name_for_payload_type@&str payload scenario.snap  scenario_name_in_logs__augmented_message_includes_scenario_name_for_payload_type@String payload scenario.snap  stateful_window__entity_error_display_snapshot.snap  (+7 more)
crates/rstest-bdd-harness-tokio/: Cargo.toml  README.md
crates/rstest-bdd-harness-tokio/src/: lib.rs  policy.rs  tokio_context.rs  tokio_harness.rs
crates/rstest-bdd-harness-tokio/tests/: attribute_policy_behaviour.rs  harness_behaviour.rs  harness_led_defaults.rs  macro_compile.rs  scenario_macros.rs
crates/rstest-bdd-harness/src/: adapter.rs  binary_test_support.rs  error.rs  lib.rs  macrotest_support.rs  policy.rs  policy_conformance.rs  runner.rs  std_harness.rs  test_utils.rs  trybuild_staging.rs
crates/rstest-bdd-harness/tests/: attribute_policy_behaviour.rs  binary_test_support_cargo.rs  harness_behaviour.rs
crates/rstest-bdd-macros/: Cargo.toml  README.md
crates/rstest-bdd-macros/src/: args.rs  codegen.rs  feature.rs  lib.rs  pattern.rs  return_classifier.rs  scenario.rs  scenario_state.rs  step.rs  step_args.rs  step_keyword.rs
crates/rstest-bdd-macros/tests/: args.rs  args_str_ref.rs  inferred_pattern.rs  inventory.rs  scenario.rs  scenarios_macro.rs  scenarios_symlink_dir.rs  trybuild.rs  trybuild_support.rs  ui_tests.rs  wrapper_shadow.rs
crates/rstest-bdd-patterns/: Cargo.toml  README.md
crates/rstest-bdd-patterns/src/: capture.rs  errors.rs  hint.rs  keyword.rs  lib.rs  specificity.rs
crates/rstest-bdd-patterns/tests/: keyword_props.rs  patterns.rs
crates/rstest-bdd-policy/: Cargo.toml  README.md
crates/rstest-bdd-policy/src/: lib.rs
crates/rstest-bdd-server/: Cargo.toml  README.md
crates/rstest-bdd-server/src/: config.rs  error.rs  lib.rs  logging.rs  main.rs  server.rs  test_support.rs  util.rs
crates/rstest-bdd-server/tests/: definition_navigation.rs  diagnostics.rs  diagnostics_basic.rs  diagnostics_placeholder.rs  diagnostics_scenario_outline.rs  diagnostics_table_docstring.rs  feature_indexing_on_save.rs  has_extension_props.rs  implementation_navigation.rs  rust_step_indexing_on_save.rs  smoke_lsp.rs  step_registry_on_save.rs
crates/rstest-bdd/src/: async_step.rs  config.rs  context.rs  execution.rs  internal_tests.rs  lib.rs  lib_old.rs  localisation.rs  localization.rs  macros.rs  panic.rs  panic_support.rs  pattern.rs  placeholder.rs  registry.rs  skip.rs  skip_helpers.rs  state.rs  step_args.rs  test_support.rs  types.rs
crates/rstest-bdd/tests/: argument_parsing.rs  assert_macros.rs  async_registry.rs  async_scenario.rs  async_scenario_debug.rs  async_semantic_behaviour.rs  async_step_functions.rs  async_step_infrastructure.rs  bulk_migration_cookbook_a.rs  bulk_migration_cookbook_b.rs  concurrent_mut_fixtures.rs  context_borrow_props.rs  datatable.rs  datatable_cache.rs  diagnostic_duplicates.rs  diagnostic_persist_usage.rs  diagnostic_unused.rs  diagnostics_fixture.rs  docstring.rs  dump_registry.rs  e2e_scenario.rs  execution_error.rs  execution_fixtures_proptest.rs  expr_syntax.rs  fallible_scenario.rs  fixture_context.rs  i18n.rs  inferred_pattern.rs  inferred_step_patterns.rs  inventory.rs  localisation.rs  localization.rs  manual_async_scenario.rs  mutable_fixture.rs  mutable_world_macro.rs  outline_placeholder.rs  overlapping_patterns.rs  pattern_mismatch.rs  placeholder_braces.rs  placeholder_parsing.rs  (+30 more)
examples/gpui-counter/: Cargo.toml  README.md
examples/gpui-counter/src/: lib.rs
examples/gpui-counter/tests/: counter.rs
examples/todo-cli/: Cargo.toml  README.md
examples/todo-cli/src/: lib.rs  main.rs
examples/todo-cli/tests/: cli.rs  todo.rs
examples/tokio-reminders/: Cargo.toml  README.md
examples/tokio-reminders/src/: lib.rs
examples/tokio-reminders/tests/: reminders.rs
(+696 files in other folders)
