[workspace]
resolver = "2"
members = [
    "crates/rstest-bdd",
    "crates/rstest-bdd-macros",
    "crates/rstest-bdd-patterns",
    "crates/cargo-bdd",
    "examples/todo-cli",
    "examples/japanese-ledger",
]

[workspace.package]
edition = "2024"
version = "0.1.0-alpha4"
rust-version = "1.85"
license = "ISC"
authors = ["Payton McIntosh <pmcintosh@df12.net>"]
description = "A BDD testing framework for Rust, built on rstest."
homepage = "https://github.com/leynos/rstest-bdd"
repository = "https://github.com/leynos/rstest-bdd"
keywords = ["test", "bdd", "rstest", "gherkin", "cucumber"]
categories = ["development-tools::testing"]

[workspace.dependencies]
camino = "1.1.12"
cap-std = { version = "3.4.4", features = ["fs_utf8"] }
gherkin = { version = "0.14", default-features = false, features = ["parser"] }
inventory = "0.3"
regex = "1.11.2"
thiserror = "1.0"
derive_more = { version = "0.99", features = ["deref", "from", "into_iterator"] }
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
cfg-if = "^1.0.0"
convert_case = "0.6"
rstest = "0.26.1"
trybuild = "1"
once_cell = "1.18"
serial_test = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cargo_metadata = "0.18"
eyre = "0.6"
ctor = "0.2"
rstest-bdd = "0.1.0-alpha4"
rstest-bdd-macros = "0.1.0-alpha4"
rstest-bdd-patterns = "0.1.0-alpha4"
log = "0.4"
fs2 = "0.4"
tempfile = "3.22"
i18n-embed = { version = "0.16", features = ["fluent-system", "desktop-requester"] }
rust-embed = "8.5.0"
fluent = "0.17"
unic-langid = { version = "0.9", features = ["macros"] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
blanket_clippy_restriction_lints = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
string_slice = "deny"
integer_division = "deny"
integer_division_remainder_used = "deny"
host_endian_bytes = "deny"
little_endian_bytes = "deny"
big_endian_bytes = "deny"
or_fun_call = "deny"
option_if_let_else = "deny"
use_self = "deny"
string_lit_as_bytes = "deny"
float_arithmetic = "deny"

[workspace.lints.rust]
unsafe_code = "forbid"

[patch.crates-io]
rstest-bdd = { path = "crates/rstest-bdd" }
rstest-bdd-macros = { path = "crates/rstest-bdd-macros" }
rstest-bdd-patterns = { path = "crates/rstest-bdd-patterns" }
