[workspace]
resolver = "2"
members = [
    "crates/rstest-bdd",
    "crates/rstest-bdd-macros",
    "crates/rstest-bdd-patterns",
    "crates/rstest-bdd-server",
    "crates/cargo-bdd",
    "examples/todo-cli",
    "examples/japanese-ledger",
]

[workspace.package]
edition = "2024"
version = "0.3.2"
rust-version = "1.85"
license = "ISC"
authors = ["Payton McIntosh <pmcintosh@df12.net>"]
description = "A BDD testing framework for Rust, built on rstest."
homepage = "https://github.com/leynos/rstest-bdd"
repository = "https://github.com/leynos/rstest-bdd"
keywords = ["test", "bdd", "rstest", "gherkin", "cucumber"]
categories = ["development-tools::testing"]

[workspace.dependencies]
camino = "1.1.12"
cap-std = { version = "3.4.4", features = ["fs_utf8"] }
gherkin = { version = "0.14", default-features = false, features = ["parser"] }
inventory = "0.3"
regex = "1.11.2"
thiserror = "1.0"
derive_more = { version = "0.99", features = ["deref", "from", "into_iterator"] }
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
cfg-if = "^1.0.0"
convert_case = "0.6"
rstest = "0.26.1"
trybuild = "1"
serial_test = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cargo_metadata = "0.18"
eyre = "0.6"
ctor = "0.2"
newt-hype = "0.2.0"
rstest-bdd = { version = "0.3.2", path = "crates/rstest-bdd" }
rstest-bdd-macros = { version = "0.3.2", path = "crates/rstest-bdd-macros" }
rstest-bdd-patterns = { version = "0.3.2", path = "crates/rstest-bdd-patterns" }
log = "0.4"
tempfile = "3.23"
i18n-embed = { version = "0.16", features = ["fluent-system", "desktop-requester"] }
rust-embed = "8.5.0"
fluent = "0.17"
unic-langid = { version = "0.9", features = ["macros"] }
async-lsp = { version = "0.2", features = ["tokio"] }
lsp-types = "0.95"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
tower = "0.4"
tokio-util = { version = "0.7", features = ["compat"] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
blanket_clippy_restriction_lints = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
string_slice = "deny"
integer_division = "deny"
integer_division_remainder_used = "deny"
host_endian_bytes = "deny"
little_endian_bytes = "deny"
big_endian_bytes = "deny"
or_fun_call = "deny"
option_if_let_else = "deny"
use_self = "deny"
string_lit_as_bytes = "deny"
float_arithmetic = "deny"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
missing_crate_level_docs = "deny"

[patch.crates-io]
rstest-bdd = { path = "crates/rstest-bdd" }
rstest-bdd-macros = { path = "crates/rstest-bdd-macros" }
rstest-bdd-patterns = { path = "crates/rstest-bdd-patterns" }
