[package]
name = "cargo-bdd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Diagnostic tooling for rstest-bdd"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rstest-bdd = { path = "../rstest-bdd" }

[dev-dependencies]
assert_cmd = "2"

