[package]
name = "cargo-bdd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Diagnostic tooling for rstest-bdd"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rstest-bdd = { workspace = true, features = ["diagnostics"] }
cargo_metadata.workspace = true
serde.workspace = true
serde_json.workspace = true
eyre.workspace = true

[dev-dependencies]
assert_cmd = "2"

