[package]
name = "cargo-bdd"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Diagnostic tooling for rstest-bdd"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rstest-bdd = { workspace = true, features = ["diagnostics"] }
cargo_metadata.workspace = true
serde.workspace = true
serde_json.workspace = true
eyre.workspace = true

[dev-dependencies]
assert_cmd = "2"
tempfile.workspace = true
serial_test = "2"
