[package]
name = "rstest-bdd-harness-gpui"
version = "0.5.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "GPUI harness adapter and attribute policy for rstest-bdd."
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
doctest = false
test = false

[features]
native-gpui-tests = []

[dependencies]
rstest-bdd-harness.workspace = true
gpui.workspace = true

[dev-dependencies]
rstest.workspace = true

[[test]]
name = "harness_behaviour"
path = "tests/harness_behaviour.rs"
required-features = ["native-gpui-tests"]

[[test]]
name = "attribute_policy_behaviour"
path = "tests/attribute_policy_behaviour.rs"
required-features = ["native-gpui-tests"]
