[package]
name = "rstest-bdd-harness-gpui"
version = "0.6.0-beta3"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "GPUI harness adapter and attribute policy for rstest-bdd."
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
doctest = false
test = false

[features]
native-gpui-tests = []

[dependencies]
gpui.workspace = true
rstest-bdd.workspace = true
rstest-bdd-harness.workspace = true
tracing.workspace = true

[dev-dependencies]
rstest.workspace = true
rstest-bdd.workspace = true
rstest-bdd-macros.workspace = true
cargo_metadata.workspace = true
insta = { workspace = true, features = ["filters"] }
macrotest.workspace = true
prettyplease.workspace = true
proptest.workspace = true
serial_test.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
trybuild.workspace = true

[[test]]
name = "scenario_name_in_logs"
path = "tests/scenario_name_in_logs.rs"
required-features = ["native-gpui-tests"]
