[package]
name = "rstest-bdd-harness-tokio"
version = "0.5.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Tokio harness adapter and attribute policy for rstest-bdd."
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
rstest-bdd-harness.workspace = true
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
rstest.workspace = true
tokio = { version = "1", features = ["rt", "time", "sync"] }
