[package]
name = "rstest-bdd-harness-tokio"
version = "0.6.0-beta2"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Tokio harness adapter and attribute policy for rstest-bdd."
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
rstest-bdd-harness.workspace = true
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
rstest.workspace = true
rstest-bdd.workspace = true
rstest-bdd-harness = { workspace = true, features = ["testing"] }
rstest-bdd-macros.workspace = true
cargo_metadata.workspace = true
macrotest.workspace = true
prettyplease.workspace = true
serial_test = "3"
trybuild.workspace = true
tokio = { version = "1", features = ["macros", "rt", "time", "sync"] }

[[test]]
name = "macro_compile"
path = "tests/macro_compile.rs"
