[package]
name = "rstest-bdd-harness"
version = "0.5.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Harness adapter traits and attribute policy interfaces for rstest-bdd."
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
