[package]
name = "rstest-bdd-harness"
version = "0.6.0-beta3"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Harness adapter traits and attribute policy interfaces for rstest-bdd."
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
testing = []
[dependencies]
cargo_metadata.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
rstest.workspace = true
temp-env.workspace = true
tempfile.workspace = true
