[package]
name = "rstest-bdd-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Procedural macros for the rstest-bdd testing framework."
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[features]
default = []
strict-compile-time-validation = []


[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
gherkin.workspace = true
walkdir = "2.5.0"
proc-macro-crate = "3"
rstest-bdd.workspace = true
thiserror.workspace = true

[dev-dependencies]
trybuild.workspace = true
once_cell.workspace = true
rstest.workspace = true
serial_test.workspace = true
