[package]
name = "rstest-bdd-macros"
version = "0.1.0-alpha4"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Procedural macros for the rstest-bdd testing framework."
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[features]
default = []
compile-time-validation = [] # Enables span-aware parsing and compile-time step signature checks.
strict-compile-time-validation = ["compile-time-validation"] # Treats warnings as hard errors during macro expansion.


[dependencies]
rstest-bdd-patterns.workspace = true
proc-macro2 = { version = "1", features = ["span-locations"] }
quote.workspace = true
syn.workspace = true
gherkin.workspace = true
walkdir = "2.5.0"
proc-macro-crate = "3"
regex.workspace = true
cfg-if.workspace = true
proc-macro-error = "1"
camino.workspace = true
cap-std.workspace = true

[dev-dependencies]
rstest.workspace = true
serial_test.workspace = true
tempfile.workspace = true
rstest-bdd.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
