[package]
name = "rstest-bdd-patterns"
version = "0.3.2"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared step-pattern compilation utilities for rstest-bdd."
homepage.workspace = true
repository.workspace = true
readme = "README.md"
include = ["src/**", "README.md", "LICENSE*", "CHANGELOG*", "Cargo.toml"]
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
gherkin.workspace = true
regex.workspace = true
thiserror.workspace = true

[dev-dependencies]
rstest.workspace = true

