[package]
name = "rstest-bdd-policy"
version = "0.4.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared runtime policy types for rstest-bdd."
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
