[package]
name = "rstest-bdd"
version = "0.1.0-alpha4"
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
rstest-bdd-patterns.workspace = true
gherkin.workspace = true
inventory.workspace = true
regex.workspace = true
thiserror.workspace = true
hashbrown = "0.16"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
ctor.workspace = true
log.workspace = true

[dev-dependencies]
rstest.workspace = true
rstest-bdd-macros.workspace = true
trybuild.workspace = true
serial_test.workspace = true

[features]
default = ["diagnostics"]
diagnostics = ["serde", "serde_json"]
