[package]
name = "todo-cli"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
eyre = "0.6"

[dev-dependencies]
rstest = "0.26.1"
rstest-bdd.workspace = true
rstest-bdd-macros.workspace = true
assert_cmd = "2"
assert_fs = "1"
toml = "0.9"
predicates = "3"
