[package]
name = "todo-cli"
version = "0.4.0"
edition.workspace = true
publish = false
rust-version.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
eyre = "0.6"

[dev-dependencies]
rstest = { workspace = true }
rstest-bdd.workspace = true
rstest-bdd-macros.workspace = true
assert_cmd = "2"
assert_fs = "1"
toml = "0.9"
predicates = "3"
